--- a/collection.css
+++ b/collection.css
@@ -7,6 +7,10 @@ body {
   font-size: 16px;
   font-family: "Poppins", sans-serif;
 }
+html{
+  scroll-behavior: smooth;
+
+}
 h2 {
   font-size: 3rem;
   font-weight: 500;
@@ -194,6 +198,7 @@ a {
   .section-1__icon {
     display: none;
   }
+
   .footer-main-3 {
     display: none;
   }
@@ -228,6 +233,9 @@ h5 {
   .section-1__nav {
     display: none;
   }
+    .section-1__nav ul {
+  flex-direction: column !important;
+}
   .meu-bar {
     display: block;
   }
@@ -278,8 +286,8 @@ h5{
   flex-direction: column;
   background: #fff;
   position: absolute;
-  top: 70px;  /* adjust if your header is taller */
-  right: 20px;
+  top: 85px;  /* adjust if your header is taller */
+  right: 3px;
   width: 200px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0,0,0,0.2);
